2009-04-29  Larry Ewing  <lewing@novell.com>

	* value.h (checked_get_subclass): use IsSubclassOrSuperclassOf to
	reduce Deployment::GetCurrent calls.

	* type.h:
	* type.cpp: add IsSubclassOrSuperclassOf so that we can use it it
	for value checking.

2009-04-29  Larry Ewing  <lewing@novell.com>

	* xaml.cpp:
	* dependencyobject.cpp: reuse types to reduce calls to
	Deployment::GetCurrent ().

2009-04-29  Alan McGovern  <alan.mcgovern@gmail.com>

	* popup.cpp: Forgot to call the base Dispose method.

2009-04-29  Geoff Norton  <gnorton@novell.com>

	* debug.cpp: Not everyone in the world is 32-bit intel.

2009-04-29  Jeffrey Stedfast  <fejj@novell.com>

	* textblock.cpp (SetTextInternal): Protect everything from
	reentrancy and never replace the autocreated InlineCollection with
	a newly allocated one. Instead, Clear() the old one and add the
	new Run.
	(OnCollectionChanged): If !setvalue, then it means we are updating
	stuff elsewhere. Avoid causing reentrancy. Also simplified a bit.

2009-04-29  Andreia Gaita  <avidigal@novell.com>

	* dependencyobject.cpp: Add MOONLIGHT_OBJECT_TRACK_VISI for outputting
	parseable stacktraces for later visualization

2009-04-29  Andreia Gaita  <avidigal@novell.com>

	* debug.[cpp|h]: Add libunwind-backed output for tracing ref/unref
	calls in a nice way, for later parsing and visualization.

2009-04-29  Geoff Norton  <gnorton@novell.com>

	* pipeline-ui.cpp|h: If the codec download ends prematurely, dlopen
	nicely crashes on a incomplete .so (thanks).  As such we're going to 
	sha1 the expected binary before blindly installing it to gatekeep
	against this.

2009-04-29  Jeffrey Stedfast  <fejj@novell.com>

	Fixes some cursor position/selection bugs

	* layout.cpp (TextLayoutLine): Initialize a new member variable
	'count' to 0.
	(Layout): Update line->count (needed for the reworking of
	GetCursor) and line->length (which was the case of the bugs)
	variables as we go. Switch to doing this for run->length too.